# vetoken

./: .env.example  .gitignore  8SMdDN9nZg2ntiBYieVKx7zeXL3DPPvFSTqV4KpsZAMH.acct.json  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci_protocols.yml  test.yml
docs/: arch.tldr
programs/vetoken/: Cargo.toml
programs/vetoken/src/: errors.rs  lib.rs  states.rs
programs/vetoken/src/ins_v1/: claim_from_distribution.rs  init_distribution.rs  init_global.rs  init_namespace.rs  init_proposal.rs  mod.rs  stake.rs  stake_to.rs  unstake.rs  update_distribution.rs  update_global.rs  update_namespace.rs  update_proposal.rs  vote.rs  withdraw_from_distribution.rs
scripts/: create-namespace.ts
src/: index.ts
src/idl/: vetoken.json
src/types/: vetoken.ts
tests/: index.test.ts
tests/test-keys/: tstCcqtDJtqnNDjqqg3UdZfUyrUmzfZ1wo1vpmXbM2S.json  tstRBjm2iwuCPSsU4DqGGG75N9rj4LDxxkGg9FTuDFn.json  tstpKQMFhqMPsvJPu4wQdu1ZRA4a2H8EJD5TXc9KpBq.json  tstxJsqAgEZUwHHfgq4MdLVD715jDPqYjBAZiSD5cRz.json
