[package]
name = "vetoken"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "vetoken"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
anchor-test = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = ">=1.17"
